Make every module's output fit a projector
The demos are read on a screen at the front of a room, so lines that wrap are a
defect. Three modules printed reasoning strings that came straight from the
library and ran past 80 columns; they now go through the same wrapper the other
modules use. Module 06's table rule switches from box-drawing characters to
ASCII, which renders predictably in any terminal font.

Module 10 was worse: Mockito's inline mock maker loads a Java agent dynamically,
so Java 21 printed four warnings and a CDS notice before the demo said anything.
exec:java runs inside the Maven JVM, so the flags belong to Maven rather than to
the plugin — .mvn/jvm.config carries -XX:+EnableDynamicAgentLoading and
-Xshare:off. That costs about 0.4s of JVM startup and removes five lines of noise
from a module whose entire output is six.